--- a/src/Styles/ef-events.scss
+++ b/src/Styles/ef-events.scss
@@ -1,70 +1,344 @@
-.ef-events-grid-month {
+@mixin media-desktop($minWidth: 720) {
+    @media screen and (min-width: $minWidth + px) {
+        @content;
+    }
+}
+
+@mixin sr-only {
+    position: absolute;
+    left: -999em;
+}
+
+.ef-events-grid {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+
   & > h2 {
-    grid-column: 2 / span 5;
+    margin: 0;
     text-align: center;
   }
 
-  & > .ef-grid-previous-month {
-    grid-column: 1 / span 1;
-    grid-row: 1;
-    justify-self: start;
-    align-self: center;
+  & > .ef-weekday-heading, & > button {
+    display: none;
   }
 
-  & > .ef-grid-next-month {
-    grid-column: 7 / span 1;
-    grid-row: 1;
-    justify-self: end;
-    align-self: center;
+  & > .ef-events-empty {
+    grid-column: 1/-1;
+    text-align: center;
   }
 
-  & > .ef-weekday-heading {
-      text-align: center;
-  }
+  @include media-desktop {
+    grid-gap: 8px;
 
-  & > #ef-events-modals {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 5;
-
-    overflow: hidden;
-    background-color: hsl(0, 0%, 0%);
-    transition: background-color 1s;
-
-    &[aria-hidden="true"] {
-      display: none;
-      width: 0.1%;
-      height: 0.1%;
-      background-color: hsla(0, 100%, 50, 0.0);
-    }
-
-    &[aria-hidden="false"] {
+    & > .ef-weekday-heading, & > button {
       display: block;
-      width: 100%;
-      height: 100%;
-      background-color: hsla(0, 0%, 50%, 0.05);
     }
 
-    & > div {
-      max-width: 700px;
-      min-width: 50%;
-      padding: 10px;
-      background-color: #ffffff;
-      box-shadow:4px 6px 20px 7px rgba(58, 58, 58, .2);
-      z-index: 10;
-      position: fixed;
-      top: 0;
-      left: 0;
-      transform: translate(-50%, -50%);
-      display: none;
-      &.expanded {
-          top: 50%;
-          left: 50%;
-          display: block;
+    & > button[disabled], & > button.calendar-date, & > a, & > span {
+      display: grid;
+      align-content: center;
+      overflow: hidden;
+      position: relative;
+      height: 104px;
+      border: none;
+      background-color: #eeeeee;
+
+      & > abbr {
+        position: absolute;
+        right: 8px;
+        top: 4px;
+        font-size: 10px;
+        @include media-desktop {
+          font-size: 12px;
+        }
+      }
+
+      & > span {
+        margin-left: 4px;
+        margin-bottom: 8px;
+        display: block;
+        line-height: 0.8rem;
+        text-align: left;
+        font-size: 10px;
+        @include media-desktop {
+          font-size: 12px;
+        }
       }
     }
   }
+}
+
+.ef-events-grid-month {
+  & > h2 {
+    grid-column: 2 / span 5;
+  }
+
+  & > .ef-grid-previous-month {
+    grid-column-start: 1;
+    grid-row: 1;
+    justify-self: start;
+  }
+
+  & > .ef-grid-next-month {
+    grid-column-start: 7;
+    grid-row: 1;
+    justify-self: end;
+  }
+
+  @include media-desktop {
+    grid-template-columns: repeat(7, 1fr);
+
+    & > .ef-weekday-heading {
+      background-color: transparent;
+      text-align: center;
+      height: auto;
+      margin: 20px 10px;
+    }
+
+    & > #ef-events-modals, & > .ef-events-empty {
+      grid-column-start: 1;
+      grid-column-end: span 7;
+    }
+
+    & > #ef-events-modals {
+      position: fixed;
+      top: 1px;
+      left: 1px;
+      z-index: 5;
+
+      overflow: hidden;
+      width: 1px;
+      height: 1px;
+
+      & > div {
+        display: none;
+      }
+
+      &[aria-hidden=false] {
+        width: 100%;
+        height: 125%;
+        background-color: hsla(0, 0%, 90%, 0.5);
+
+        & > div.expanded {
+          display: block;
+          max-width: 700px;
+          min-width: 50%;
+          padding: 10px;
+          background-color: #fff;
+          box-shadow: 4px 6px 20px 7px hsla(0, 0%, 50%, 0.2);
+          z-index: 10;
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+
+        }
+      }
+    }
+
+/*    & > button[disabled], > button.calendar-date, > a.calendar-date, > span.calendar-date {
+    }
+*/    /*& > #ef-events-modals[aria-hidden=false] {*/
+/*
+        & > button {
+          position: absolute;
+          top: 8px;
+          right: 10px;
+          height: 30px;
+          width: 30px;
+          overflow: hidden;
+          background-color: transparent;
+          background-image: url("/assets/ui/icon-close.png");
+          background-repeat: no-repeat;
+          background-position: center center;
+          background-size: 15px auto;
+          border: none;
+          & > span {
+            @include sr-only;
+          }
+        }
+      }*/
+    /*}*/
+  }
+/*
+
+  & > .ef-grid-next-month {
+    grid-column-start: 7;
+    justify-self: end;
+  }
+
+  @include media-desktop {
+    & > .ef-grid-previous-month {
+      margin-left: 5px;
+    }
+
+    & > .ef-grid-next-month {
+      margin-right: 5px;
+    }
+  }
+
+  & > a {
+    &:after {
+      content: "";
+    }
+    &:hover {}
+  }
+
+  @include media-desktop {
+    margin: 10px;
+    padding: 8px;
+    border: 1px solid #dddddd;
+
+
+
+    & > button[disabled], > button.calendar-date, > a.calendar-date, > span.calendar-date {
+
+
+
+      & > span {
+        margin-left: 4px;
+        margin-bottom: 8px;
+        display: block;
+        line-height: 0.8rem;
+        text-align: left;
+        font-size: 10px;
+        @include media-desktop {
+          font-size: 12px;
+        }
+      }
+    }
+
+    & > button.calendar-date {
+      border-radius: 0;
+      transition: border-radius 0.3s;
+
+      background-color: #333333;
+      color: #ffffff;
+      p, span, abbr {
+        color: #ffffff;
+      }
+
+      &:hover:not([disabled]), &:hover {
+        border-radius: 10px;
+        cursor: pointer;
+      }
+    }
+  }*/
+}
+
+.ef-events-grid-year {
+  & > h2 {
+    grid-column: 2 / span 1;
+  }
+
+  & > .ef-grid-previous-year {
+    grid-column-start: 1;
+    grid-row: 1;
+    justify-self: start;
+  }
+
+  & > .ef-grid-next-year {
+    grid-column-start: 3;
+    grid-row: 1;
+    justify-self: end;
+  }
+
+  @include media-desktop {
+    grid-template-columns: repeat(3, 1fr);
+
+    & > .ef-events-empty {
+      grid-column-start: 1;
+      grid-column-end: span 3;
+    }
+
+    & > button[disabled], & > button.calendar-date, & > a, & > span {
+      & > span {
+        text-align: center;
+      }
+    }
+    /*& > #ef-events-modals[aria-hidden=false] {*/
+/*
+        & > button {
+          position: absolute;
+          top: 8px;
+          right: 10px;
+          height: 30px;
+          width: 30px;
+          overflow: hidden;
+          background-color: transparent;
+          background-image: url("/assets/ui/icon-close.png");
+          background-repeat: no-repeat;
+          background-position: center center;
+          background-size: 15px auto;
+          border: none;
+          & > span {
+            @include sr-only;
+          }
+        }
+      }*/
+    /*}*/
+  }
+/*
+
+  & > .ef-grid-next-month {
+    grid-column-start: 7;
+    justify-self: end;
+  }
+
+  @include media-desktop {
+    & > .ef-grid-previous-month {
+      margin-left: 5px;
+    }
+
+    & > .ef-grid-next-month {
+      margin-right: 5px;
+    }
+  }
+
+  & > a {
+    &:after {
+      content: "";
+    }
+    &:hover {}
+  }
+
+  @include media-desktop {
+    margin: 10px;
+    padding: 8px;
+    border: 1px solid #dddddd;
+
+
+
+    & > button[disabled], > button.calendar-date, > a.calendar-date, > span.calendar-date {
+
+
+
+      & > span {
+        margin-left: 4px;
+        margin-bottom: 8px;
+        display: block;
+        line-height: 0.8rem;
+        text-align: left;
+        font-size: 10px;
+        @include media-desktop {
+          font-size: 12px;
+        }
+      }
+    }
+
+    & > button.calendar-date {
+      border-radius: 0;
+      transition: border-radius 0.3s;
+
+      background-color: #333333;
+      color: #ffffff;
+      p, span, abbr {
+        color: #ffffff;
+      }
+
+      &:hover:not([disabled]), &:hover {
+        border-radius: 10px;
+        cursor: pointer;
+      }
+    }
+  }*/
 }
