--- a/src/Styles/ef-events.scss
+++ b/src/Styles/ef-events.scss
@@ -11,14 +11,11 @@
 
 .ef-events-grid {
   display: grid;
+  grid-gap: 8px;
 
   & > h2 {
     margin: 0;
     text-align: center;
-  }
-
-  & > .ef-weekday-heading, & > button {
-    display: none;
   }
 
   & > .ef-events-empty {
@@ -27,8 +24,6 @@
   }
 
   @include media-desktop {
-    grid-gap: 8px;
-
     & > .ef-weekday-heading, & > button {
       display: block;
     }
@@ -68,8 +63,14 @@
 }
 
 .ef-events-grid-month {
+  grid-template-columns: repeat(7, 1fr);
+
   & > h2 {
     grid-column: 2 / span 5;
+  }
+
+  & > .ef-weekday-heading, & > button {
+    display: none;
   }
 
   & > .ef-grid-previous-month {
@@ -84,9 +85,14 @@
     justify-self: end;
   }
 
-  @include media-desktop {
-    grid-template-columns: repeat(7, 1fr);
+  & > #ef-events-modals {
+    grid-column: 1/span 7;
+    & > div > button:last-of-type {
+      display: none;
+    }
+  }
 
+  @include media-desktop {
     & > .ef-weekday-heading {
       background-color: transparent;
       text-align: center;
@@ -138,6 +144,8 @@
 }
 
 .ef-events-grid-year {
+  grid-template-columns: repeat(3, 1fr);
+
   & > h2 {
     grid-column: 2 / span 1;
   }
@@ -154,18 +162,48 @@
     justify-self: end;
   }
 
-  @include media-desktop {
-    grid-template-columns: repeat(3, 1fr);
+  & > button[disabled], & > a {
+    display: grid;
+    /*grid-column: 1 / span 3;*/
+    align-content: center;
+    overflow: hidden;
+    position: relative;
+    height: 84px;
+    border: none;
+    background-color: #eeeeee;
 
+    & > abbr {
+      position: absolute;
+      right: 8px;
+      top: 4px;
+      font-size: 10px;
+      @include media-desktop {
+        font-size: 12px;
+      }
+    }
+
+    & > span {
+      margin-left: 4px;
+      margin-bottom: 8px;
+      display: block;
+      line-height: 0.8rem;
+      text-align: center;
+      font-size: 10px;
+      @include media-desktop {
+        font-size: 12px;
+      }
+    }
+  }
+
+  @include media-desktop {
     & > .ef-events-empty {
       grid-column-start: 1;
       grid-column-end: span 3;
     }
 
-    & > button[disabled], & > button.calendar-date, & > a, & > span {
-      & > span {
-        text-align: center;
-      }
+    & > button[disabled], & > a {
+      grid-column: span 1;
+      height: 104px;
     }
   }
 }
