--- a/src/Styles/ef-events.scss
+++ b/src/Styles/ef-events.scss
@@ -16,6 +16,7 @@
   & > h2 {
     margin: 0;
     text-align: center;
+    align-self: center;
   }
 
   & > .ef-events-empty {
@@ -28,6 +29,12 @@
       cursor: pointer;
       border-radius: 10px;
     }
+  }
+
+  & > .ef-grid-next-month {
+    grid-column-start: 7;
+    grid-row: 1;
+    justify-self: end;
   }
 
   @include media-desktop {
