fix universal styles

--- a/src/Styles/ef-events.scss
+++ b/src/Styles/ef-events.scss
@@ -108,6 +108,7 @@
 
   @include media-desktop {
     & > .ef-weekday-heading {
+      display: block;
       background-color: transparent;
       text-align: center;
       height: auto;
